# dataaugs

./: README.md  environment_minimal.yml  fig0_scaling_baselines.sh  fig1_scaling_repetitions.sh  fig2_all_augmentations.sh  fig3a_scaling_model_width.sh  fig3b_scaling_model_type.sh  fig4_scaling_invariant_archs.sh  setup.cfg  train_sgd_variant.py
config/: cfg.yaml
config/analysis/: data_augs_impact.yaml  final.yaml  full.yaml  limited.yaml  none.yaml
config/data/: CIFAR10-C.yaml  CIFAR10.yaml  CIFAR100.yaml  CINIC10.yaml  EMNIST.yaml  ImageNet.yaml  MNIST.yaml  SVHN.yaml  TinyImageNet.yaml
config/data/db/: LMDB.yaml
config/hyp/: _default_hyperparams.yaml  base_da.yaml  base_sgd.yaml  imagenet_A3.yaml
config/impl/: standard.yaml
config/impl/setup/: distributed.yaml
config/model/: convmixer.yaml  convmixer_small.yaml  e2cnn.yaml  e2cnn18.yaml  efficientnet.yaml  flipinvariantresnet.yaml  lieconv.yaml  mlp.yaml  mobilenet.yaml  orbitresnet.yaml  resnet20-10.yaml  resnet8.yaml  small_vit.yaml  small_vit2.yaml  swin.yaml  swinv2.yaml
dataaug/: __init__.py  utils.py
dataaug/analysis/: analysis.py  cosine_pairs.py  rollouts.py
dataaug/data/: cutout.py  data_preparation.py  datasets.py  lmdb_datasets.py
dataaug/models/: convmixer.py  e2cnnmodels.py  mobilenet.py  models.py  modules.py  resnets.py  swin_transformers.py  vit_small.py
dataaug/training/: __init__.py  optimizers.py  training.py  utils.py
